--- a/styles/base.css
+++ b/styles/base.css
@@ -81,6 +81,19 @@ nav a:hover{
 	text-decoration:overline;
 }
 
+.linea{
+
+    border-width: 5px solid #000;
+    text-align: justify;
+}
+
+.rigth {
+    margin: 10px;
+    padding: 10px;
+    position:relative;
+    
+}
+
 @media (min-width: 640px) {
 	nav ul {
 		display: flex;
