--- a/styles/base.css
+++ b/styles/base.css
@@ -11,7 +11,7 @@
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.1); 
     padding: 1rem;
-    background-color: #ddd;
+    background-color: #ffffff;
     color: #000;
 }
 
