--- a/styles/base.css
+++ b/styles/base.css
@@ -94,6 +94,13 @@ nav a:hover{
     
 }
 
+footer { 
+
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
+}
+
 @media (min-width: 640px) {
 	nav ul {
 		display: flex;
