--- a/styles/base.css
+++ b/styles/base.css
@@ -8,15 +8,53 @@
 
 /*caja para poner limites*/
 .card{
-    margin: auto;
+
+    margin: 10px;
     border: 1px solid rgba(0, 0, 0, 0.1); 
-    padding: auto;
+    padding: 5px;
     background-color: #ffffff;
     color: #000;
+    width: auto;
     
 }
 
+.txleft{
+    margin: 10px;
+    border: 1px solid #ffffff; 
+    padding: 5px;
+    background-color: #ffffff;
+    text-align: left;
 
+}
+
+.txrigth{
+    margin: 10px;
+    border: 1px solid #ffffff; 
+    padding: 5px;
+    background-color: #ffffff;
+    text-align: right;
+}
+
+h2{
+
+    text-align: center;
+}
+
+section{
+    display: grid;
+}
+
+.imgrigth{
+
+    float: right;
+
+}
+
+.imgleft{
+
+    float: left;
+
+}
 
 .box1{
 
@@ -35,8 +73,8 @@
 
 main{
 
-    grid-column: 1/2;
-    margin: 1rem;
+    display: grid;
+    align-items: center;
 
 }
 /*Mis fuentes de txt*/
@@ -60,18 +98,12 @@ main{
 }
 
 
-section{
-    width: 20em;
-    text-align: center;
-    position: relative;
-}
-
 /*Navegacion */
 
 nav {
 	background-color: black;
 	margin: 0 auto;
-	max-width: 800px;
+	max-width: auto;
 }
 nav ul {
 	list-style-type: none;
@@ -97,7 +129,6 @@ nav a:hover{
 .rigth {
     margin: 10px;
     padding: 10px;
-    position:relative;
     grid-column: 2/2;
     
 }
@@ -106,7 +137,6 @@ nav a:hover{
 
     margin: 10px;
     padding: 10px;
-    position:relative;
     grid-column: 1/2;
     
 }
@@ -119,15 +149,16 @@ footer {
     text-align: center;
 }
 
-@media (min-width: 640px) {
-	nav ul {
-		display: flex;
-	}
-	nav ul li {
+nav ul {
+        display: flex;
+    }
+	
+nav ul li  {
 		flex: 1 1 100%;
-	}
-}
+	
+    }
 
-section img {
+
+/*section img {
     float: right;
-}
+}*/
