--- a/styles/place.css
+++ b/styles/place.css
@@ -1,2 +1,8 @@
 /*pues qui ira lo que tenga que ir*/
 
+footer { 
+
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
+}
