--- a/styles/place.css
+++ b/styles/place.css
@@ -15,6 +15,16 @@ body {
     text-align: justify;
 }
 
+h2{
+    color: #000;
+    background-color: rgba(0, 255, 255, 0.822);
+}
+section{
+
+    padding: auto;
+    border: #fffefe;
+    background-color: #fafafad5;
+}
 /*I want my picture be back of all.*/
 
 .flota{
