--- a/styles/temples.css
+++ b/styles/temples.css
@@ -45,7 +45,7 @@ footer {
   }
   
   .galeria img {
-    width: 30%;
+    width: 200px;
     margin: 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
