--- a/styles/temples.css
+++ b/styles/temples.css
@@ -14,6 +14,12 @@ header {
 
 }
 
+header h1 {
+
+  text-align: left;
+
+}
+
 /*Navegacion */
 
 nav {
@@ -27,7 +33,7 @@ nav ul {
 nav a {
 	display: block;
 	color: #fff;
-	text-align: center;
+	text-align: right;
 	padding: 1rem;
 	text-decoration: none;
 }
