--- a/styles/temples.css
+++ b/styles/temples.css
@@ -10,7 +10,7 @@
 header {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  background-color: plum;
 
 }
 
@@ -23,7 +23,7 @@ header h1 {
 /*Navegacion */
 
 nav {
-	background-color: black;
+  text-align: right;
 	margin: 0 auto;
 	max-width: auto;
 }
@@ -33,7 +33,6 @@ nav ul {
 nav a {
 	display: block;
 	color: #fff;
-	text-align: right;
 	padding: 1rem;
 	text-decoration: none;
 }
@@ -48,6 +47,7 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+    background-color: plum;
 }
 
 /*galeria*/
