--- a/styles/temples.css
+++ b/styles/temples.css
@@ -27,7 +27,10 @@ nav {
 	margin: 0 auto;
 	max-width: auto;
 }
+
 nav ul {
+  display: flex;
+  justify-content: space-evenly;
 	list-style-type: none;
 }
 nav a {
