--- a/styles/temples.css
+++ b/styles/temples.css
@@ -23,6 +23,10 @@ header h1 {
 /*Navegacion */
 
 nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: auto;
   text-align: right;
 	margin: 0 auto;
 	max-width: auto;
@@ -58,11 +62,11 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-  }
+}
   
-  .galeria img {
+.galeria img {
     width: 200px;
     margin: 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  }
+}
