--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -1,3 +1,8 @@
+/*So sorry the a lot comments but I need to know what myself was thinking to do this parts and 
+understand better my code and so sorry that I type that in Spanish but I need understand me, I use and apply
+the code that I understand by videos of Youtube in Spanish so sorry my issues*/
+
+
 /*Aqui programando la navegacion*/
 
 .nosubraya { /*Aqui se quitara el subrayado a los links*/
