--- a/styles/form.css
+++ b/styles/form.css
@@ -1,4 +1,6 @@
-/*Here my new project*/
+/*Here my new project. So sorry the a lot comments but I need to know what myself was thinking to do this parts and 
+understand better my code and so sorry that I type that in Spanish but I need understand me, I use and apply
+the code that I understand by videos of Youtube in Spanish so sorry my issues*/
 
 /* Estilo general para el cuerpo */
 body {
